:pencil2: update: add asg subject to ec2 topic

--- a/resumos/2-EC2.md
+++ b/resumos/2-EC2.md
@@ -124,8 +124,32 @@ Portanto tem integração as ferramentas da AWS com pacotes pré-instalados e co
 O armazenamento de instância( *instance store* ) **fornece armazenamento temporário**, esse armazenamento está localizado em discos físicos anexado a instância do EC2.
 A instância **perderá todos os dados se for parada (*stop*), hibernada(*hibernate*) ou encerrada (*terminate*)**, portanto é chamado de armazenamento efêmero. Casos de uso são para buffer, cache e conteúdo temporário.
 
+<br />
+
+## ASG
+
+É um acrônimo para o **Auto Scaling Group** é utilizado para aumentar e reduzir cargas (adicionando ou removendo instâncias EC2) realizando a escalabilidade automática, podendo ser definido um número mínimo e máximo de instâncias.
+
+Um grupos de Auto Scaling pode conter instâncias EC2 em zonas de disponibilidade diferentes em uma mesma região, porém não podem ter grupos de Auto Scaling em múltiplas regiões para uma mesma aplicação.
+
+Existem quatro formas de realizar a escalabilidade horizontal com o ASG. Escalabilidade manual, dinâmica,preditiva e programada.
+
+- **Escalabilidade manual:** Você pode alterar o tamanho de um grupo do Auto Scaling manualmente, esta forma é utilizada quando a escalabilidade automática não é necessária ou quando você quer manter a capacidade computacional em um número fixo.
+
+- Escalabilidade dinâmica: É definido como a escala será feita a partir de uma demanda alterada. Existem três tipos de escalabilidade dinâmica, simples, em etapas e com monitoramento do objetivo.
+
+- **Escalabilidade preditiva:** Para aumentar o número de instâncias EC2 no ASG antecipando padrões diários e semanais a partir do fluxo de tráfego.
+
+- **Escalabilidade programada:** Esta forma permite que você defina a sua própria programação (leia-se data) de escalabilidade, com mudanças previsíveis.
 
 <br />
+
+## :books: Referências
+
+Para uma compreensão mais profunda sobre EC2 + ASG recomendo a leitura da documentação oficial, os links estão abaixo.
+
+- [O que é o Amazon EC2 Auto Scaling?](https://docs.aws.amazon.com/pt_br/autoscaling/ec2/userguide/what-is-amazon-ec2-auto-scaling.html)
+- [Opções de Escalabilidade](https://docs.aws.amazon.com/pt_br/autoscaling/ec2/userguide/scaling_plan.html#scaling_typesof)
 
 ---
 Feito com ♥ by :man_astronaut: Guilherme Bezerra :wave: [Entrar em contato!](https://www.linkedin.com/in/gbdsantos/)
